refactor, update doc
