# product-api/swagger.yml
@@ -3,15 +3,16 @@ consumes:
     - application/json
 definitions:
     GenericError:
-        description: GenericError is a generic error message returned by a server
+        description: GenericError GenericError is a generic error message returned by a server
         properties:
             message:
+                description: message
                 type: string
                 x-go-name: Message
         type: object
-        x-go-package: github.com/anassidr/go-microservices/handlers
+        x-go-package: github.com/anassidr/go-microservices/product-api/sdk/models
     Product:
-        description: Product defines the structure for an API product
+        description: Product Product defines the structure for an API product
         properties:
             description:
                 description: the description for this poduct
@@ -45,17 +46,18 @@ definitions:
             - price
             - sku
         type: object
-        x-go-package: github.com/anassidr/go-microservices/data
+        x-go-package: github.com/anassidr/go-microservices/product-api/sdk/models
     ValidationError:
-        description: ValidationError is a collection of validation error messages
+        description: ValidationError ValidationError is a collection of validation error messages
         properties:
             messages:
+                description: messages
                 items:
                     type: string
                 type: array
                 x-go-name: Messages
         type: object
-        x-go-package: github.com/anassidr/go-microservices/handlers
+        x-go-package: github.com/anassidr/go-microservices/product-api/sdk/models
 info:
     description: Documentation for Product API
     title: of Product API
@@ -65,6 +67,13 @@ paths:
         get:
             description: Returns a list of products
             operationId: listProducts
+            parameters:
+                - description: |-
+                    Currency used when returning the price of the product,
+                    when not specified currency is returned in GBP.
+                  in: query
+                  name: Currency
+                  type: string
             responses:
                 "200":
                     $ref: '#/responses/productsResponse'
@@ -137,6 +146,12 @@ paths:
             description: Return a list of products from the database
             operationId: listSingleProduct
             parameters:
+                - description: |-
+                    Currency used when returning the price of the product,
+                    when not specified currency is returned in GBP.
+                  in: query
+                  name: Currency
+                  type: string
                 - description: The id of the product for which the operation relates
                   format: int64
                   in: path
